# ClionSDL2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Interface/: IStateMachine.h
Player/: Player.cpp  Player.h
StateController/: StateController.cpp  StateController.h
World/: World.cpp  World.h
cmake/: FindSDL2.cmake
